# abc

./: .clinerules  .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  Makefile  PLUGIN_DEVELOPMENT.md  README-nix.md  README.md  TESTING.md  flake.nix  install_from_github.sh  pyproject.toml
abc_cli/: __init__.py  abc.conf.template  abc.sh  abc.tcsh  abc_generate.py  abc_setup.py  llm_provider.py  prompts.py
abc_cli/providers/: __init__.py  anthropic.py  prompts.py
abc_cli/tests/: conftest.py  test_abc_generate.py  test_integration.py
abc_provider_anthropic/: README.md  pyproject.toml
abc_provider_anthropic/abc_provider_anthropic/: __init__.py  llm_provider.py
abc_provider_anthropic/tests/: conftest.py  test_provider.py
abc_provider_aws_bedrock/: README.md  pyproject.toml
abc_provider_aws_bedrock/abc_provider_aws_bedrock/: __init__.py  llm_provider.py
abc_provider_aws_bedrock/tests/: conftest.py  test_provider.py
abc_provider_openai/: README.md  pyproject.toml
abc_provider_openai/abc_provider_openai/: __init__.py  llm_provider.py
abc_provider_openai/tests/: conftest.py  test_provider.py
