[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abc-cli"
version = "2024.12.19"
description = "AI bash/zsh/tcsh Command"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Claude 3.5 Sonnet", email = "" },
    { name = "Eric Hammond", email = "" }
]
dependencies = [
    "readchar==4.1.0",
    "distro==1.8.0",
    "prompt_toolkit==3.0.47"
]

[project.urls]
Homepage = "https://github.com/alestic/abc"
Repository = "https://github.com/alestic/abc.git"

[project.scripts]
abc_generate = "abc_cli.abc_generate:main"
abc_setup = "abc_cli.abc_setup:main"

[tool.hatch.build.targets.wheel]
packages = ["abc_cli"]

[tool.hatch.build.targets.wheel.force-include]
"abc_cli/abc.sh" = "abc_cli/abc.sh"
"abc_cli/abc.tcsh" = "abc_cli/abc.tcsh"
"abc_cli/abc.conf.template" = "abc_cli/abc.conf.template"

[tool.hatch.metadata]
allow-direct-references = true
