[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abc-cli"
version = "2025.05.25"
description = "AI bash/zsh/tcsh Command"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Claude 3.5 Sonnet", email = "" },
    { name = "Eric Hammond", email = "" }
]
dependencies = [
    "readchar>=4.1.0",
    "distro>=1.8.0",
    "prompt_toolkit>=3.0.47"
]

[project.urls]
Homepage = "https://github.com/alestic/abc"
Repository = "https://github.com/alestic/abc.git"

[project.scripts]
abc_generate = "abc_cli.abc_generate:main"
abc_setup = "abc_cli.abc_setup:main"

[tool.hatch.build.targets.wheel]
packages = ["abc_cli"]

[tool.hatch.build.targets.wheel.force-include]
"abc_cli/abc.sh" = "abc_cli/abc.sh"
"abc_cli/abc.tcsh" = "abc_cli/abc.tcsh"
"abc_cli/abc.conf.template" = "abc_cli/abc.conf.template"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["abc_cli/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["abc_cli"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
