[project]
name = "abc-provider-anthropic"
version = "2024.12.15"
description = "Anthropic LLM provider for abc-cli"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    { name = "Claude 3.5 Sonnet", email = "" },
    { name = "Eric Hammond", email = "" }
]
dependencies = [
    "anthropic==0.40.0"
]

[project.entry-points."abc.llm_providers"]
anthropic = "abc_provider_anthropic:AnthropicProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
