[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abc-provider-aws-bedrock"
version = "2025.09.04"  # Match current abc-cli version
description = "AWS Bedrock LLM provider plugin for abc-cli"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = [
    "boto3>=1.40.0",  # Latest stable boto3 version with enhanced Bedrock support
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.entry-points."abc.llm_providers"]
aws-bedrock = "abc_provider_aws_bedrock.llm_provider:AWSBedrockProvider"
